objects/fcio1__Industry_Taxonomy_Policy__c.object
<CustomObject>
    <fields>
        <fullName>fcio1__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Code_Order_of_Precedence__c</fullName>
        <label>Code Order of Precedence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Industry_Target_Field_Map__c</fullName>
        <label>Industry Target Field Map</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcio1__Target_Entity__c</fullName>
        <label>Target Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Territory_External__c</fullName>
        <externalId>true</externalId>
        <label>Territory External</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>fcio1__GTM__c</referenceTo>
        <relationshipName>Industry_Taxonomy_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fullcast Industry Taxonomy Policy</label>
    <listViews>
        <fullName>fcio1__All</fullName>
        <columns>NAME</columns>
        <columns>fcio1__Active__c</columns>
        <columns>fcio1__Territory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Industry Taxonomy Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fullcast Industry Taxonomy Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>